force-app/main/default/objects/Defendant_Firm__c/Defendant_Firm__c.object-meta.xml
<CustomObject>
    <label>Defendant Firm</label>
    <nameField>
        <displayFormat>Defendant Firm - {00000}</displayFormat>
        <label>Defendant Firm Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Defendant Firms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>