force-app/main/default/objects/Defendant_Firm__c/fields/Firm__c.field-meta.xml
<CustomField>
    <fullName>Firm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Firm</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Defendant Firms</relationshipLabel>
    <relationshipName>Defendant_Firms</relationshipName>
    <type>Lookup</type>
</CustomField>