force-app/main/default/objects/Defendant_Firm__c/fields/Firm_Team__c.field-meta.xml
<CustomField>
    <fullName>Firm_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Firm Team</label>
    <referenceTo>Firm_Team__c</referenceTo>
    <relationshipLabel>Defendant Firms</relationshipLabel>
    <relationshipName>Defendant_Firms</relationshipName>
    <type>Lookup</type>
</CustomField>